# projectVoxels

./: .gitignore  CMakeLists.txt  README.md  cudaHeaders.cuh  geometry.cuh  geometry.h  loader.cu  main.cpp  main.cu  planets.cuh  ray.cu  ray.cuh  saver.cu  saver.cuh  settings.cuh  tga.cuh  tga.h  tga_by_nvidia.cu  todo.txt  voxel.cuh  voxelizer.cu  voxelizer.cuh
docs/: SRS_Blood, sweat, and voxels.docx  vision.docx
graphics/doc/html/: doxygen.css
graphics/lib/: freeglut_staticd.lib  freeglutd.exp  sfml-audio.lib  sfml-graphics.lib  sfml-main.lib  sfml-network.lib  sfml-system.lib  sfml-window.lib
